[package]
name = "pfx2origin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossbeam-channel = "0.5.10"
ipnet = "2.9.0"
itertools = "0.12.0"
threadpool = "1.8.1"
bgpkit-parser = "0.9.4"
bgpkit-broker = "0.6.2"
oneio = {version = "0.15", features = ["lib"]}
